Some changes on my portfolio

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@ background: '/img/bg-contact.jpg'
 form: true
 ---
 
+<link href="https://fonts.cdnfonts.com/css/aux-dotbitc?styles=9328,9331" rel="stylesheet">
+
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
