--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 layout: home
 background: '/img/bg-index.jpg'
 ---
+
+<link href="https://fonts.cdnfonts.com/css/aux-dotbitc?styles=9328,9331" rel="stylesheet">
