--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@ title: About Me
 description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
+<link href="https://fonts.cdnfonts.com/css/aux-dotbitc?styles=9328,9331" rel="stylesheet">
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
 
