--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Portfolio
-background: '/img/bg-post.jpg'
+background: '/img/bg-portfolio.jpg'
 ---
 
 <link href="https://fonts.cdnfonts.com/css/aux-dotbitc?styles=9328,9331" rel="stylesheet">
