about updated + other fixs

--- a/about.html
+++ b/about.html
@@ -1,13 +1,47 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
+description: This is what I do as a Game Developer.
 background: '/img/bg-about.jpg'
 ---
 <link href="https://fonts.cdnfonts.com/css/aux-dotbitc?styles=9328,9331" rel="stylesheet">
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<h2>I'm Sergio González Guerra</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+<p>I'm a Computer Engineer and I'm a huge enthusiast when it comes to game Development. </p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p>I love to create and design games and even create graphic resources with my own pixelart. </p>
+
+<p>I still qualify as a junior developer, but I am willing to learn about this industry. </p>
+
+<p>I have a great creativity when it comes to elaborate mechanics or new ideas for videogames.</p>
+
+<br>
+
+<h3>My skills</h3>
+
+<h4>Programming languages I know</h4>
+<ul>
+    <li>C++</li>
+    <li>Java</li>
+    <li>HTML, Css, Javascript</li>
+    <li>C#</li>
+</ul>
+
+<h4>Engines</h4>
+<ul>
+    <li>Unity</li>
+    <li>Unreal Engine 5</li>
+</ul>
+
+
+<h4>Other Tools</h4>
+<ul>
+    <li>Aseprite</li>
+</ul>
+
+<br>
+
+<p>Of course, I also love being a gamer, and play all kinds of video games.</p>
+
+<img src="/gif/Polar-project-gifs/polarProjectGroup.gif" alt="img" class="responsive" width="640" height="192"/>
